# belanjaku

./: .gitignore  Cargo.toml
admin/: .gitignore  bun.lockb  package.json
admin/src/Layout/: LayoutMenuData.tsx  RightSidebar.tsx
admin/src/Routes/: allRoutes.ts
admin/src/helpers/: supabase_client.ts
admin/src/pages/Authentication/: Login.tsx  Register.tsx
admin/src/pages/Belanja/: Dashboard.tsx  List.tsx  monthly.tsx
admin/src/pages/Components/Table/ReactTable/: Hoverable.tsx
admin/src/pages/Users/: ListView.tsx
admin/src/slices/auth/login/: reducer.ts  thunk.ts
bot/: Cargo.toml  Dockerfile  default.nix  shell.nix
bot/src/: main.rs  supabase.rs  supadb.rs
src/: main.rs  tests.rs
